# sdl3game

./: .gitignore  .gitmodules  CMakeLists.txt  mingw-i386.cmake
src/: main.cpp
